[project]
name = "miipher-evaluation"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
dependencies = ["miipher @ git+https://github.com/Wataru-Nakata/miipher", "pesq~=0.0.4", "pystoi~=0.3.3", "torchaudio==2.1.0"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipykernel~=6.25.2"]
[tool.hatch.metadata]
allow-direct-references = true
